stopped the image from spilling out of the main business card content

--- a/style.css
+++ b/style.css
@@ -45,10 +45,17 @@ html {
   border-radius: 0 0 1.5em 1.5em;
 }
 
+.card article {
+  height: 12em;
+  background-color: rgba(0,0,0,0.25);
+}
+
 .card article img {
   max-height: 100%;
   float: right;
 }
+
+
 
 /* styles specific to the setup of the card container */
 /* styles specific to the header and footer */
